CKW-105 Focus is not visible -- added new class .footer-image to correct focus issue

--- a/wp-content/themes/portent_enercare_2021/assets/scss/partials/_site-footer.scss
+++ b/wp-content/themes/portent_enercare_2021/assets/scss/partials/_site-footer.scss
@@ -6,6 +6,16 @@
 	padding: 40px 0 10px;
 	position: relative;
 
+	.footer-image {
+		a {
+			&:focus {
+				& > img {
+					outline: 2px dotted $black;
+				}
+			}
+		}
+	}
+
 	ul {
 		margin-bottom: 30px;
 	}
@@ -110,6 +120,20 @@
 
 	.footer-links a + a {
 		margin-left: 12px;
+	}
+
+	.footer-image {
+		> figure {
+			> a {
+				
+				&:focus {
+
+					& > img {
+						outline: 2px dotted $black;
+					}
+				}
+			}
+		} 
 	}
 
 	.cafemedia {
